packages/secure_core_bridge/lib/src/ffi/generated_bindings.dart

// ignore_for_file: always_specify_types, type_annotate_public_apis
// GENERATED — do not edit by hand. Regenerate with:
// dart run packages/secure_core_bridge/tool/generate_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
@ffi.DefaultAsset('package:secure_core_bridge/src/ffi/generated_bindings.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<SecureCoreBuffer Function(ffi.Pointer<ffi.Uint8>, ffi.Size)>()
external SecureCoreBuffer secure_core_encrypt(
  ffi.Pointer<ffi.Uint8> plaintext,
  int plaintext_len,
);

@ffi.Native<SecureCoreBuffer Function(ffi.Pointer<ffi.Uint8>, ffi.Size)>()
external SecureCoreBuffer secure_core_decrypt(
  ffi.Pointer<ffi.Uint8> ciphertext,
  int ciphertext_len,
);

@ffi.Native<ffi.Int32 Function()>()
external int secure_core_health_check();

@ffi.Native<SecureCoreBuffer Function()>()
external SecureCoreBuffer secure_core_version();

@ffi.Native<ffi.Void Function(SecureCoreBuffer)>()
external void secure_core_buffer_free(SecureCoreBuffer buffer);

enum SecureCoreStatus {
  SECURE_CORE_STATUS_OK(0),
  SECURE_CORE_STATUS_INVALID_INPUT(1),
  SECURE_CORE_STATUS_MALFORMED_CIPHERTEXT(2),
  SECURE_CORE_STATUS_AUTHENTICATION_FAILED(3),
  SECURE_CORE_STATUS_UNSUPPORTED_VERSION(4),
  SECURE_CORE_STATUS_UNAVAILABLE(5),
  SECURE_CORE_STATUS_INTERNAL(6);

  final int value;
  const SecureCoreStatus(this.value);

  static SecureCoreStatus fromValue(int value) => switch (value) {
    0 => SECURE_CORE_STATUS_OK,
    1 => SECURE_CORE_STATUS_INVALID_INPUT,
    2 => SECURE_CORE_STATUS_MALFORMED_CIPHERTEXT,
    3 => SECURE_CORE_STATUS_AUTHENTICATION_FAILED,
    4 => SECURE_CORE_STATUS_UNSUPPORTED_VERSION,
    5 => SECURE_CORE_STATUS_UNAVAILABLE,
    6 => SECURE_CORE_STATUS_INTERNAL,
    _ => throw ArgumentError('Unknown value for SecureCoreStatus: $value'),
  };
}

final class SecureCoreBuffer extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Size()
  external int len;

  @ffi.Int32()
  external int status;
}
